--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "apollo-server-micro": "^2.19.0",
+    "axios": "^0.21.0",
+    "graphql": "^15.4.0",
+    "lodash": "^4.17.20",
+    "micro": "^9.3.4",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
