--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "apollo-server-micro": "^2.19.0",
-    "axios": "^0.21.0",
+    "bcryptjs": "^2.4.3",
     "graphql": "^15.4.0",
-    "lodash": "^4.17.20",
+    "graphql-tag": "^2.11.0",
     "micro": "^9.3.4",
+    "mongoose": "^5.10.16",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
