--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 /.next/
 /out/
 
+# env in nextjs
+next.config.js
+
 # production
 /build
 
@@ -29,7 +32,7 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
-/next.config.js
+
 
 # vercel
 .vercel
