--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "10.0.3",
     "next-fonts": "^1.5.1",
     "next-images": "^1.6.2",
+    "nodemailer": "^6.4.17",
     "postcss": "^8.2.1",
     "postcss-import": "^13.0.0",
     "react": "17.0.1",
