--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.1.0",
     "bcryptjs": "^2.4.3",
     "graphql": "^15.4.0",
+    "graphql-request": "^3.3.0",
     "graphql-tag": "^2.11.0",
     "jsonwebtoken": "^8.5.1",
     "micro": "^9.3.4",
@@ -26,6 +27,7 @@
     "postcss-import": "^13.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "swr": "^0.3.9",
     "tailwindcss": "^2.0.1"
   }
 }
