--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apollo-server-plugin-http-headers": "^0.1.4",
     "autoprefixer": "^10.1.0",
     "bcryptjs": "^2.4.3",
+    "cookies": "^0.8.0",
     "graphql": "^15.4.0",
     "graphql-request": "^3.3.0",
     "graphql-tag": "^2.11.0",
