--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.6",
     "apollo-server-micro": "^2.19.0",
     "apollo-server-plugin-http-headers": "^0.1.4",
     "autoprefixer": "^10.1.0",
