--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apollo-server-micro": "^2.19.0",
     "apollo-server-plugin-http-headers": "^0.1.4",
     "autoprefixer": "^10.1.0",
+    "avataaars": "^1.2.1",
     "cookies": "^0.8.0",
     "graphql": "^15.4.0",
     "graphql-request": "^3.3.0",
